--- a/public/404.html
+++ b/public/404.html
@@ -29,7 +29,7 @@
 
 
 <meta property="og:url" content="http://localhost:1313/404.html">
-  <meta property="og:site_name" content="Hugo Profile">
+  <meta property="og:site_name" content="/home/adenyrr">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Mon antre">
   <meta property="og:locale" content="fr_fr">
@@ -109,7 +109,7 @@
   
 
   <title>
-Hugo Profile | Page not found
+/home/adenyrr | Page not found
 
   </title>
 </head>
@@ -408,7 +408,7 @@ Hugo Profile | Page not found
         <div class="col-md-4 text-center">
             
                 <div class="pb-2">
-                    <a href="http://localhost:1313/" title="Hugo Profile">
+                    <a href="http://localhost:1313/" title="/home/adenyrr">
                         <img alt="Footer logo" src="/fav.png"
                             height="40px" width="40px">
                     </a>
